[package]
name = "rust-hp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaserde = "0.8.0"
yaserde_derive = "0.8.0"
reqwest = { version = "0.11", features = ["blocking"] }
log = "0.4.20"
env_logger = "0.10.0"
signal-hook = "0.3.17"

[dependencies.uuid]
version = "1.4.1"
features = [
	"v4",                # Lets you generate random UUIDs
	"fast-rng",          # Use a faster (but still sufficiently random) RNG
	"macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
