[package]
name = "rust-hp"
version = "0.1.0"
edition = "2021"

[dependencies]
yaserde = "0.8.0"
yaserde_derive = "0.8.0"
reqwest = { version = "0.11", features = ["blocking"] }
log = "0.4.20"
env_logger = "0.10.0"
signal-hook = "0.3.17"
tempfile = "3.8.0"
uuid = "1.4.1"
sendgrid = "0.19.0"
chrono = "0.4.26"
